<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.slakra.common.utils.DateTimeUtil"/>
        <variable
            name="currentWeather"
            type="com.slakra.domain.entity.CurrentWeatherEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        app:behavior_hideable="false"
        app:behavior_peekHeight="156dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        roundedCorner="@{true}"
        bottomLeftRadius="@{@dimen/margin_zero}"
        bottomRightRadius="@{@dimen/margin_zero}">

        <TextView
            android:id="@+id/tvSunrise"
            style="@style/TextStyleTitle"
            android:text="@string/sunrise"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSunriseTime"
            style="@style/TextStyleBody"
            android:text="@{DateTimeUtil.formatTime(currentWeather.sunrise, DateTimeUtil.H_MM_FORMAT)}"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/tvSunrise" />

        <TextView
            android:id="@+id/tvSunset"
            style="@style/TextStyleTitle"
            android:text="@string/sunset"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@id/tvSunrise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvSunsetTime"
            style="@style/TextStyleBody"
            android:text="@{DateTimeUtil.formatTime(currentWeather.sunset, DateTimeUtil.H_MM_FORMAT)}"
            app:layout_constraintStart_toStartOf="@id/tvSunset"
            app:layout_constraintTop_toBottomOf="@id/tvSunset" />

        <View
            android:id="@+id/divider1"
            style="@style/DividerStyle"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/tvSunriseTime"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvPressureH"
            style="@style/TextStyleTitle"
            android:text="@string/pressure"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/tvPressure"
            style="@style/TextStyleBody"
            android:text="@{currentWeather.pressure+' '+@string/hpa}"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/tvPressureH" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/TextStyleTitle"
            android:text="@string/humidity"
            app:layout_constraintTop_toTopOf="@id/tvPressureH"
            app:layout_constraintStart_toStartOf="@id/tvSunset" />

        <TextView
            android:id="@+id/tvHumidityValue"
            style="@style/TextStyleBody"
            android:text="@{currentWeather.humidity+@string/percent}"
            app:layout_constraintStart_toStartOf="@id/tvHumidity"
            app:layout_constraintTop_toBottomOf="@id/tvHumidity" />

        <View
            android:id="@+id/divider2"
            style="@style/DividerStyle"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/tvPressure"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvVisibility"
            style="@style/TextStyleTitle"
            android:text="@string/visibility"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <TextView
            android:id="@+id/tvVisibilityValue"
            style="@style/TextStyleBody"
            android:text="@{String.format(@string/visible, currentWeather.visibility)}"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/tvVisibility" />

        <TextView
            android:id="@+id/tvDewPoint"
            style="@style/TextStyleTitle"
            android:text="@string/dew_point"
            app:layout_constraintTop_toTopOf="@id/tvVisibility"
            app:layout_constraintStart_toStartOf="@id/tvSunset" />

        <TextView
            style="@style/TextStyleBody"
            android:text="@{String.format(@string/temperature, currentWeather.dewPoint)}"
            app:layout_constraintStart_toStartOf="@id/tvHumidity"
            app:layout_constraintTop_toBottomOf="@id/tvDewPoint" />

        <View
            android:id="@+id/divider3"
            style="@style/DividerStyle"
            app:layout_constraintStart_toStartOf="@id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@id/tvVisibilityValue"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>