<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.slakra.common.utils.DateTimeUtil"/>
        <variable
            name="dailyItem"
            type="com.slakra.domain.entity.DailyWeatherEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivWeather"
            android:layout_width="@dimen/margin_32"
            android:layout_height="@dimen/margin_32"
            iconCode="@{dailyItem.weatherCode}"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{DateTimeUtil.formatTime(dailyItem.timeStamp, DateTimeUtil.DAY_DATE_FORMAT)}"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_18"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="@id/ivWeather"
            app:layout_constraintStart_toEndOf="@id/ivWeather"
            app:layout_constraintBottom_toBottomOf="@id/ivWeather"/>

        <TextView
            android:id="@+id/tvMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/temperature, dailyItem.minTemp)}"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toStartOf="@id/tvMaxTemp"
            app:layout_constraintTop_toTopOf="@id/tvMaxTemp"/>

        <TextView
            android:id="@+id/tvMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/temperature, dailyItem.maxTemp)}"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="@id/ivWeather"
            app:layout_constraintBottom_toBottomOf="@id/ivWeather"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider"
            style="@style/DividerStyle"
            app:layout_constraintTop_toBottomOf="@id/ivWeather"
            app:layout_constraintStart_toStartOf="@id/ivWeather"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textColor="#757575"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/text_size_16"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/divider"/>

        <TextView
            android:id="@+id/tvPressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dailyItem.pressure+' '+@string/hpa}"
            android:layout_marginStart="@dimen/margin_32"
            app:layout_constraintTop_toTopOf="@id/tvPressure"
            app:layout_constraintBottom_toBottomOf="@id/tvPressure"
            app:layout_constraintStart_toEndOf="@id/tvPressure"/>

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="#757575"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
            android:layout_marginEnd="@dimen/margin_32"
            app:layout_constraintEnd_toStartOf="@id/tvHumidityValue"
            app:layout_constraintTop_toTopOf="@id/tvHumidityValue"
            />

        <TextView
            android:id="@+id/tvHumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dailyItem.humidity+@string/percent}"
            android:layout_marginEnd="@dimen/margin_24"
            app:layout_constraintTop_toTopOf="@id/tvPressure"
            app:layout_constraintBottom_toBottomOf="@id/tvPressure"
            app:layout_constraintEnd_toEndOf="@id/divider"/>

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textColor="#757575"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/text_size_16"
            android:layout_marginBottom="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tvPressure"
            app:layout_constraintStart_toStartOf="@id/tvPressure"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvWindValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/wind_speed, dailyItem.windSpeed)}"
            app:layout_constraintTop_toTopOf="@id/tvWind"
            app:layout_constraintBottom_toBottomOf="@id/tvWind"
            app:layout_constraintStart_toStartOf="@id/tvPressureValue"/>

        <TextView
            android:id="@+id/tvUvIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uv_index"
            android:textColor="#757575"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="@id/tvHumidity"
            app:layout_constraintTop_toTopOf="@id/tvUvi"
            />

        <TextView
            android:id="@+id/tvUvi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dailyItem.uvIndex}"
            app:layout_constraintTop_toTopOf="@id/tvWind"
            app:layout_constraintBottom_toBottomOf="@id/tvWind"
            app:layout_constraintStart_toStartOf="@id/tvHumidityValue"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tvPressure,tvPressureValue,tvHumidity,tvHumidityValue,tvWind,tvWindValue,tvUvIndex,tvUvi"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>